@@ -1,3 +1,8 @@
+2007-04-25  Mukund Sivaraman  <muks@mukund.org>
+
+	* plug-ins/common/tiff-load.c: moved the non-interactive check out
+	of load_dialog() and into run().
+
 2007-04-25  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpparamspecs.c (gimp_param_string_validate): added
